2001-06-12  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-retrieve-headers-with-nov): Remove
	a redundant check that I made.

2001-06-11  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/lpath.el: Don't Fbind `xml-node-children'.

2001-06-11  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Fix
	inhibiting the expiring when `nnshimbun-keep-unparsable-dated-articles'
	is nil.

2001-06-11  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/gnus-group.el (toplevel): Removed autoload code for
	"nnshimbun".

	* texi/gnus-ja.texi (Web Newspaper): Add documents about
	`nnshimbun-index-range'.

2001-06-11  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Don't
	refer to the variable `nnshimbun-keep-last-article', we should
	keep the last article anyway.
	(nnshimbun-keep-last-article): Abolished.

	* lisp/gnus.el: Autoload "nnshimbun" for the command `gnus-group-
	make-shimbun-group'.

2001-06-11  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: Remove some garbage.

2001-06-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* texi/message-ja.texi: Use `iso-2022-7bit' instead of
	`iso-2022-7bit-ss2' to keep a compatibility between XEmacsen and
	FSF Emacsen.
	* texi/gnus-ja.texi: Ditto.

2001-06-09  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (top-level): Updated comments.
	(nnshimbun): New customize group.
	(nnshimbun-keep-last-article): Defined as customize variable.
	(nnshimbun-keep-unparsable-dated-articles): Ditto.
	(nnshimbun-insert-nov): Use `when' instead of `if'.
	(gnus-group-shimbun-server-history): Imported from
	`gnus-group.el'.
	(gnus-group-make-shimbun-group): Ditto.

	* lisp/gnus-group.el (gnus-group-make-shimbun-group): Its real
	definition is moved to `nnshimbun.el' and autload code is added.
	(gnus-group-shimbun-server-history): Its definition is moved to
	`nnshimbun.el'.
